Fix: Code blocks overflowing parents Fix: Allow quiz response code block to overflow-y to a scroll

--- a/client/src/components/layouts/prism.css
+++ b/client/src/components/layouts/prism.css
@@ -7,6 +7,10 @@ pre[class*='language-'] {
   background: var(--primary-background);
 }
 
+pre[class*='language'] code[class*='language-'] {
+  white-space: nowrap;
+}
+
 * {
   text-shadow: none !important;
 }
